--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -208,12 +208,20 @@ nav {
                         border: none;
                         height: 25px;
                         width: 100%;
+                        background: var(--gray1);
+                        color: var(--textMain);
+                        border: 1px solid var(--gray4);
                     }
 
                     .panel .body .properties .user-form .field-container .form-group textarea {
-                        border-radius: 5px;
+                        border-radius: 0;
                         font-size: 15px;
                         border: none;
+                        padding: 5px;
+                        resize: vertical;
+                        background-color: var(--gray1);
+                        color: var(--textMain);
+                        border: 1px solid var(--gray4);
                     }
 
                     .panel .body .properties .user-form .field-container .form-group .form-drop2 {
@@ -221,6 +229,9 @@ nav {
                         border: none;
                         height: 25px;
                         width: 100%;
+                        background-color: var(--gray1);
+                        color: var(--textMain);
+                        border: 1px solid var(--gray4);
                     }
 
                     .panel .body .properties .user-form .field-container .form-group .selections {
@@ -496,9 +507,10 @@ nav {
             }
 
                 .panel .body .properties .order-list2 .sorters {
-                    width: 100%;
                     display: flex;
-                    flex-direction: column;
+                    gap: 30px;
+                    margin-bottom: 30px;
+                    align-items: flex-end;
                 }
 
                     .panel .body .properties .order-list2 .sorters p {
@@ -508,31 +520,25 @@ nav {
 
                     .panel .body .properties .order-list2 .sorters .btns {
                         display: flex;
-                        flex-direction: row;
                         gap: 10px;
                     }
 
                         .panel .body .properties .order-list2 .sorters .btns .btn {
                             padding: 8px 10px;
-                            margin: 10px 0;
                             font-size: 15px;
                         }
 
-                    .panel .body .properties .order-list2 .sorters .options {
+                    .panel .body .properties .order-list2 .sorters form {
                         display: flex;
-                        flex-direction: row;
-                        padding: 10px 0;
+                        gap: 10px;
                     }
 
-                        .panel .body .properties .order-list2 .sorters .options form {
-                            display: flex;
-                            gap: 20px;
-                        }
+                    .panel .body .properties .order-list2 .sorters .selector {
+                        display: flex;
+                        flex-direction: column;
+                    }
 
-                        .panel .body .properties .order-list2 .sorters .options .selector {
-                            display: flex;
-                            flex-direction: column;
-                        }
+                        
 
                 .panel .body .properties .order-list2 table {
                     padding-right: 20px;
