--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -32,12 +32,8 @@
                                     <div class="selections">
                                         <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select Trainers</p></div>
                                         <ul id="trainerList">
-                                            @foreach (var employee in Model.Employees) {
-                                                foreach(string trainerID in Model.TrainersList) {
-                                                    if (trainerID == employee.Id.ToString()) {
-                                                        <li draggable="true" class="pill">@employee.FirstName @employee.LastName</li>
-                                                    }
-                                                }
+                                            @foreach (string trainerName in Model.TrainersList) {
+                                                <li draggable="true" class="pill">@trainerName</li>
                                             }
                                         </ul>
                                         <input id="trainersInput" asp-for="TrainingOrder.Trainers" />
@@ -194,12 +190,12 @@
     overlay.addEventListener("click", closeComponent);
 
     document.addEventListener("addTrainerEvent", function (event) {
-        addTrainer(event.detail.names, event.detail.ids);
+        addTrainer(event.detail.names);
         closeComponent();
     });
 
     document.addEventListener("addTraineeEvent", function (event) {
-        addTrainee(event.detail.names, event.detail.ids);
+        addTrainee(event.detail.name, event.detail.id);
         closeComponent();
     });
 
@@ -223,18 +219,17 @@
         });
     });
 
-    function addTrainer(trainerNames, trainerIds) {
-        if (!trainerNames.trim() || !trainerIds.trim()) {
+    function addTrainer(trainerNames) {
+        if (!trainerNames.trim()) {
             return;
         }
 
         var trainerList = document.getElementById("trainerList");
         var names = trainerNames.split(',');
-        var ids = trainerIds.split(',');
 
         for (var i = 0; i < names.length; i++) {
             if (!Array.from(trainerList.getElementsByTagName("li")).some(li => li.textContent.trim() === names[i].trim())) {
-                trainerList.innerHTML += `<li draggable="true" class="pill" data-id="${ids[i].trim()}">${names[i].trim()}</li>`;
+                trainerList.innerHTML += `<li draggable="true" class="pill">${names[i].trim()}</li>`;
             }
         }
 
@@ -242,7 +237,7 @@
     }
 
     function addTrainee(traineeName, traineeId) {
-        if (!traineeName.trim() || !traineeId.trim()) {
+        if (!traineeName.trim() || !traineeId) {
             return;
         }
 
@@ -257,7 +252,7 @@
         var trainersInput = document.getElementById("trainersInput");
         var trainerListItems = Array.from(trainerList.getElementsByTagName("li"));
         trainersInput.value = trainerListItems.map(function (item) {
-            return item.getAttribute("data-id") || item.textContent.trim();
+            return item.textContent.trim();
         }).join(", ");
     }
 
